--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 a {
